# datmo

./: .codacy.yml  .coveragerc  .gitignore  .readthedocs.yml  .style.yapf  .travis.yml  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  UPGRADE_GUIDE.md  appveyor.yml  circle.yml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  upgrade_to_python3.py  version.py
.circleci/: config.yml
datmo/: VERSION  __init__.py  __main__.py  api.py  config.py  deploy.py  logger.py  monitoring.py  run.py  snapshot.py  task.py
datmo/cli/: main.py  parser.py
datmo/controller/: base.py  model.py  project.py  snapshot.py  task.py
datmo/dashboard/: app.py
datmo/entity/: code.py  environment.py  file_collection.py  model.py  session.py  snapshot.py  task.py  user.py
datmo/lang/: __init__.py  en.py
datmo/test/: test_config.py  test_module_loader.py  test_snapshot.py  test_task.py
datmo/tests/: test_config.py  test_deploy.py  test_logger.py  test_monitoring.py  test_snapshot.py  test_task.py
datmo/util/: __init__.py  class_stub.py  exceptions.py  file_storage.py  i18n.py  json_store.py  (+3 more)
devtools/: README.md
docs/: Makefile  cli.rst  cmd.rst  cmd_init.rst  cmd_snapshot.rst  concepts.rst  conf.py  env-setup.rst  environment.yml  examples.md  examples.rst  faq.rst  hello_world.rst  index.rst  make.bat  python_sdk.rst  quickstart.rst  readme.md  tutorials.rst  visualize-snapshots.rst  workflows.rst
examples/: README.md  iris_logistic_regression.ipynb  iris_logistic_regression.py  iris_sklearn.py  iris_sklearn.sh
(+322 files in other folders)
