[metadata]
name = datmo
author = datmo developers
summary = Open source model tracking tool for developers
home-page = https://github.com/datmo/datmo
license = Apache Software License
license_file = LICENSE.txt
version = 0.0.1
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
keywords =
    setup
    distutils
[files]
packages =
    datmo
[bdist_wheel]
universal=1